clean up welcome page

--- a/neatshows/src/main/webapp/welcome.htm
+++ b/neatshows/src/main/webapp/welcome.htm
@@ -32,13 +32,7 @@
 		<TD WIDTH="15%">
 		</TD>
 		<TD ALIGN="LEFT" WIDTH="70%">
-<FONT FACE="verdana, arial, helvetica" SIZE="3">
-(<B>10/11/2011</B>) <b>Played a show.&nbsp; </b>
-We managed to play a show in Seattle a few weeks ago, which was great.  Once the baby comes, we will look at doing some more, probably in the April timeframe.  At the very least, practice will give us an excuse to have date night!
-<p>
-<font face="verdana, arial, helvetica">Check out our new tour
-<a href="images/TFBBshirt_3sm.jpg">T-shirt logo</a>.</font></p>
-<p>
+
 <font face="verdana, arial, helvetica">Feel free to check out our </font>
 <FONT FACE="verdana, arial, helvetica" SIZE="3">
 <b><a href="MP3s.htm">songs</a></b>,
@@ -47,7 +41,7 @@ they're all up here for folks to download.&nbsp;
 		</p>
 <p>
 <FONT FACE="verdana, arial, helvetica" SIZE="3">
-As always, you can check out our other bands on their websites:
+You can check out our other bands on their websites:
 <a target="_blank" href="http://www.thecripples.com">The Cripples</a> (Reba),
 and
 <a target="_blank" href="http://www.sicko.com">Sicko</a> (Ean).&nbsp;
