--- a/neatshows/src/main/webapp/showlist.htm
+++ b/neatshows/src/main/webapp/showlist.htm
@@ -29,7 +29,7 @@
     <td width="100%" colspan="3" height="19">&nbsp;</td>
   </tr>
   <tr>
-    <td width="100%" colspan="3" height="19"><p align="center"><font face="Verdana" size="2">Friday, September 23rd at Darrell's Tavern 18041 Aurora Avenue North, Seattle WA - with the Utmost and the Primate Five </font></p></td>
+   <!-- <td width="100%" colspan="3" height="19"><p align="center"><font face="Verdana" size="2">Friday, September 23rd at Darrell's Tavern 18041 Aurora Avenue North, Seattle WA - with the Utmost and the Primate Five </font></p></td>-->
   </tr>
 </table>
 </BODY>
