--- a/neatshows/src/main/webapp/contactus.htm
+++ b/neatshows/src/main/webapp/contactus.htm
@@ -22,7 +22,7 @@
 		<TD ALIGN="CENTER" COLSPAN="1" WIDTH="20%">
 		</TD>
 		<TD ALIGN="CENTER" COLSPAN="1">
-			<img src="http://www.eanh.net/images/emailaddress.gif">
+			<img src="images/eansmail.GIF">
 		<TD ALIGN="CENTER" COLSPAN="1" WIDTH="20%">
 		</TD>
 	</TR>
