removing a 3 year old show listing

--- a/neatshows/src/main/webapp/default.htm
+++ b/neatshows/src/main/webapp/default.htm
@@ -19,7 +19,7 @@ Tales From The Birdbath, Baron Von Birdbath, pop, indie, punk, emo, twee, sicko,
 <FRAME SRC="welcome.htm" NAME="main" SCROLLING="AUTO" MARGINWIDTH=0 MARGINHEIGHT=0>
 <NOFRAMES>
 <BODY>
-This is the Tales From The Birdbath website.  Tales From The Birdbath is a new pop (indie pop and pop punk???) band with a new record called Baron Von Birdbath.  The record is out on Empty Records in Seattle Washington, USA.  Ean Hernandez, previously a member of Sicko, started this band after Sicko broke up.  If you are reading this info, please know that this is a frames based site, and in order to view it properly, you must download a new browser version... either IE3 or Netscape 3 or higher.
+This is the Tales From The Birdbath website.  Tales From The Birdbath is a twee pop with a new record called Baron Von Birdbath.  The record is out on Empty Records in Seattle Washington, USA.  Ean Hernandez, previously a member of Sicko, started this band after Sicko broke up.  If you are reading this info, please know that this is a frames based site, and in order to view it properly, you must download a new browser version... either IE3 or Netscape 3 or higher.
 
 http://www.neatshows.com/birdbath/welcome.htm
 
